--- a/source/main/template/mobile/default/style/game_list.css
+++ b/source/main/template/mobile/default/style/game_list.css
@@ -101,14 +101,14 @@ body{
 }
 .list_game li a{
 	display:inline-block;
-	padding:5px 0px 5px 15px;
+	padding:5px 10px;
 	text-decoration:none;
 	font-size:14px;
 	line-height: 25px;
 	letter-spacing:1px;
 	/* color:#666; */
 	color: #978D6E;
-	width:24%;
+	width:auto;
 }
 .list_game li a:hover,.list_game li a:focus{
 	background: #2c2927;
